align fix footer

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -479,7 +479,11 @@
 .footer{
     background-color: #353535;
     margin-top: -100px;
-    padding-left: 15px;
+    padding-left: 5px;
+  @media screen and (min-width : $pc) {
+    padding: 0;
+  }
+
  
 
 
